--- a/docker/web/public/index.html
+++ b/docker/web/public/index.html
@@ -19,7 +19,7 @@
   <main class="container">
     <div class="row">
       <div class="one-half column">
-        <h1>Ponzu Docker Example</h1>
+        <h1>Ponzu Docker Example2</h1>
         <p>The reviews are being served from the Ponzu admin. See this <a href="https://github.com/ponzu-cms/ponzu/tree/master/examples/docker">example project on github</a>.<p>
         <section id='main'>
             loading
